# VGPU-Mon

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  analyze.cmd  analyze.ps1  build.cmd  build.ps1  install.ps1  installer.iss  installer.ps1  package.ps1  run.ps1
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: architecture.md
src/: d3dkmt_gpu.c  d3dkmt_gpu.h  dxgi_gpu.c  dxgi_gpu.h  main.c  nvml_dyn.c  nvml_dyn.h  pdh_gpu.c  pdh_gpu.h  updater.c  updater.h  util.c  version.h  vgpu.h  vgpu.rc
tests/: test_cli.ps1  test_conpty.c  test_core.c  test_installer.ps1  test_live_update.ps1  update_smoke.c
tools/: install-inno.ps1  stage-release-metadata.ps1  verify-pe.ps1
